# topicos-ia-p1

./: LICENSE  README.md  main.py  pyproject.toml
data/processed/: X_test.npy  X_train.npy
src/: data_preprocessing.py
