[project]
name = "topicos-ia-p1"
version = "0.1.0"
description = "Ambiente de desenvolvimento para o primeiro projeto da disciplina Topicos em IA."
authors = [
    {name = "JoaoFgds",email = "joaofagundesx3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

[tool.flake8]
ignore = ["E501"]